--- a/01-color-flipper/starter/index.html
+++ b/01-color-flipper/starter/index.html
@@ -39,5 +39,7 @@
             </div>
         </main>
         <!-- End of Container -->
+        <!-- javascript -->
+        <script src="./app.js"></script>
     </body>
 </html>
