--- a/04-reviews/starter/index.html
+++ b/04-reviews/starter/index.html
@@ -34,9 +34,9 @@
                             id="person-img"
                         />
                     </div>
-                    <h4 id="author">sara jone</h4>
+                    <h4 id="author">sara jones</h4>
                     <p id="job">ux designer</p>
-                    <p class="info">
+                    <p id="info">
                         Lorem ipsum dolor, sit amet consectetur adipisicing
                         elit. Provident cumque non repellat quia. Illo numquam
                         aspernatur dolor atque voluptate quisquam!
