--- a/07-modal/starter/index.html
+++ b/07-modal/starter/index.html
@@ -20,14 +20,14 @@
         <header class="hero">
             <div class="banner">
                 <h1>modal project</h1>
-                <button class="btn" type="button">open modal</button>
+                <button class="btn modal-btn" type="button">open modal</button>
             </div>
         </header>
         <!-- modal -->
         <div class="modal-overlay">
             <div class="modal-container">
                 <h3>modal content</h3>
-                <button class="close-btn modal-btn" type="button">
+                <button class="close-btn" type="button">
                     <i class="fas fa-times"></i>
                 </button>
             </div>
