buttons dynamically added with javascript

--- a/09-menu/starter/index.html
+++ b/09-menu/starter/index.html
@@ -25,7 +25,7 @@
             <!-- end of title -->
             <!-- filter buttons -->
             <div class="btn-container">
-                <button type="button" class="btn filter-btn" data-id="all">
+                <!-- <button type="button" class="btn filter-btn" data-id="all">
                     all
                 </button>
                 <button
@@ -40,12 +40,12 @@
                 </button>
                 <button type="button" class="btn filter-btn" data-id="shakes">
                     shakes
-                </button>
+                </button> -->
             </div>
             <!-- end of filter buttons -->
             <div class="section-center">
                 <!-- single item -->
-                <article class="menu-item">
+                <!-- <article class="menu-item">
                     <img
                         src="./menu-item.jpeg"
                         alt="pancakes"
@@ -63,7 +63,7 @@
                             velit quod in vel, repellat saepe architecto labore.
                         </p>
                     </div>
-                </article>
+                </article> -->
                 <!-- end of single item -->
             </div>
         </section>
