--- a/10-scroll/setup/index.html
+++ b/10-scroll/setup/index.html
@@ -83,7 +83,7 @@
         <footer class="section">
             <p>
                 copyright &copy; backroads travel tours company
-                <span class="date">2021</span>
+                <span class="date"></span>
                 .all rights reserved
             </p>
         </footer>
