--- a/16-ES6-slider/setup/index.html
+++ b/16-ES6-slider/setup/index.html
@@ -1,20 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ES6 Slider Setup</title>
-    <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
-
-    <!-- stylesheet -->
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <h2>slider project</h2>
-    <script type="module" src="app.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>ES6 Slider Setup</title>
+        <!-- font-awesome -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+        />
+        <!-- stylesheet -->
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <section class="slider">
+            <div class="reviews">
+                <h2><span>/</span>reviews</h2>
+            </div>
+            <div class="slide-container">
+                <article class="slide">
+                    <img
+                        class="img"
+                        src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959131/person-2_ipcjws.jpg"
+                        alt="jane doe"
+                    />
+                    <h4>jane doe</h4>
+                    <p class="title">software developer</p>
+                    <p class="text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Voluptatibus possimus, nemo consequuntur asperiores
+                        maxime eveniet alias rerum repudiandae at aliquid!
+                    </p>
+                    <div class="quote-icon">
+                        <div class="fas fa-quote-right"></div>
+                    </div>
+                </article>
+            </div>
+            <!-- prev next buttons -->
+            <button class="btn prev-btn">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="btn next-btn">
+                <i class="fas fa-chevron-right"></i>
+            </button>
+        </section>
+        <script type="module" src="app.js"></script>
+    </body>
 </html>
