--- a/16-ES6-slider/setup/index.html
+++ b/16-ES6-slider/setup/index.html
@@ -10,32 +10,14 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
         />
         <!-- stylesheet -->
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
         <section class="slider">
             <div class="reviews">
                 <h2><span>/</span>reviews</h2>
             </div>
-            <div class="slide-container">
-                <article class="slide">
-                    <img
-                        class="img"
-                        src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959131/person-2_ipcjws.jpg"
-                        alt="jane doe"
-                    />
-                    <h4>jane doe</h4>
-                    <p class="title">software developer</p>
-                    <p class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Voluptatibus possimus, nemo consequuntur asperiores
-                        maxime eveniet alias rerum repudiandae at aliquid!
-                    </p>
-                    <div class="quote-icon">
-                        <div class="fas fa-quote-right"></div>
-                    </div>
-                </article>
-            </div>
+            <div class="slide-container"></div>
             <!-- prev next buttons -->
             <button class="btn prev-btn">
                 <i class="fas fa-chevron-left"></i>
@@ -44,6 +26,6 @@
                 <i class="fas fa-chevron-right"></i>
             </button>
         </section>
-        <script type="module" src="app.js"></script>
+        <script type="module" src="./app.js"></script>
     </body>
 </html>
